[gd_scene load_steps=4 format=3 uid="uid://gvp570o13ubs"]

[ext_resource type="Script" path="res://scenes/menus/menu_main/menu_main.gd" id="1_ovqp1"]
[ext_resource type="Theme" uid="uid://diwlomdiy70p" path="res://themes/label_normal.theme" id="2_bpuda"]
[ext_resource type="Theme" uid="uid://bsefhr7rfdet0" path="res://themes/button_normal.theme" id="3_jusne"]

[node name="menu_main" type="CanvasLayer"]
script = ExtResource("1_ovqp1")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -292.5
offset_top = 84.0
offset_right = 292.5
offset_bottom = 258.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("2_bpuda")
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 125
text = "CHRISADER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_start" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.501
anchor_top = 0.421
anchor_right = 0.501
anchor_bottom = 0.421
offset_left = -249.92
offset_top = -62.68
offset_right = 250.08
offset_bottom = 62.32
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_jusne")
text = "Start"

[node name="button_options" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.708
anchor_right = 0.5
anchor_bottom = 0.708
offset_left = -250.0
offset_top = -62.64
offset_right = 250.0
offset_bottom = 62.36
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_jusne")
text = "Options"

[node name="button_exit" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.848
anchor_right = 0.5
anchor_bottom = 0.848
offset_left = -250.0
offset_top = -62.84
offset_right = 250.0
offset_bottom = 62.16
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_jusne")
text = "Exit"

[node name="button_select_level" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.561
anchor_right = 0.5
anchor_bottom = 0.561
offset_left = -250.0
offset_top = -62.8801
offset_right = 250.0
offset_bottom = 62.1199
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_jusne")
text = "Select Level"

[connection signal="pressed" from="button_start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="button_options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="button_exit" to="." method="_on_button_exit_pressed"]
[connection signal="pressed" from="button_select_level" to="." method="_on_button_select_level_pressed"]
